welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:16: error: ':' expected but '.' found.
def faireV(Color.yellow) ={
                ^MethodsPicture:37: error: identifier expected but '}' found.
}
^